update: re-organizando modulos e dominio